[package]
name = "oxidize"
version = "0.0.1"
authors = ["Nathaniel van Diepen <eeems@eeems.codes>"]
repository = "https://github.com/Eeems/oxidize"
license = "MIT"
description = "New and better reMarkable UI"
readme = "README.md"
exclude = ["docker-toolchain/*", "applications/*"]

[build]
target= "armv7-unknown-linux-gnueabihf"

[dependencies]
cgroups-fs="1.1.1"
chrono = "0.4.0"
cute = "0.3.0"
gettext = "0.4.0"
hyphenation = { version = "0.7.1", features = ["embed_all"] }
lazy_static = "1.0.0"
libremarkable = { git = "https://github.com/Eeems/libremarkable.git" , rev = "96dcc2ec7859f611be95dab40a33789475f7afbf" }
log = "0.4.1"
rusttype = "0.4.1"
subprocess = "0.1.18"
textwrap = { version = "0.11", features = ["hyphenation"] }
wifiscanner = "0.3.6"

[features]
enable-runtime-benchmarking = []

[profile.release]
debug = true

